--- a/etc/cargo.config.dist
+++ b/etc/cargo.config.dist
@@ -6,13 +6,13 @@
 opt-level = 3
 debug = true
 rpath = false
-lto = true
+lto = false
 debug-assertions = false
-codegen-units = 1
+codegen-units = 4
 panic = "unwind"
 incremental = false
 overflow-checks = false
 
 [profile.release.package.server]
 opt-level = 3
-codegen-units = 1
+codegen-units = 4
