--- a/components/tidb_query_datatype/Cargo.toml
+++ b/components/tidb_query_datatype/Cargo.toml
@@ -9,6 +9,7 @@ license = "Apache-2.0"
 [dependencies]
 api_version = { workspace = true }
 base64 = "0.13"
+bytes = { workspace = true }
 bitfield = "0.13.2"
 bitflags = "1.0.1"
 boolinator = "2.4.0"
