--- a/components/resource_metering/Cargo.toml
+++ b/components/resource_metering/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 license = "Apache-2.0"
 
 [dependencies]
+bytes = { workspace = true }
 collections = { workspace = true }
 crossbeam = "0.8"
 futures = "0.3"
